// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders buy summary card correctly 1`] = `
<div
  className="MuiBox-root css-ufn7cb"
  data-testid="summary-card"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-tc7jh2-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 css-1d9ye53-MuiTypography-root"
        data-testid="typography-component"
        style={
          {
            "color": "#7D7D89",
          }
        }
      >
        You are buying
      </p>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        data-testid="typography-component"
      >
        0.023451 BTC
      </h6>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 css-1d9ye53-MuiTypography-root"
        data-testid="typography-component"
        style={
          {
            "color": "#7D7D89",
          }
        }
      >
        1BTC = $3,406,069.54
      </p>
    </div>
  </div>
  <div
    className="MuiBox-root css-iwz9lp"
  >
    <div>
      <div
        className="MuiBox-root css-15budcu"
        data-testid="summary-stepper"
      >
        <div
          className="MuiBox-root css-1oyjow8"
        >
          <div
            className="MuiBox-root css-1j5om8t"
          >
            <div>
              <img
                alt="icon"
                data-testid="iconComponent"
                height="32px"
                src=""
                style={
                  {
                    "padding": "5px 6px",
                  }
                }
                width="32px"
              />
            </div>
          </div>
          <div
            className="MuiBox-root css-15budcu"
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-1d9ye53-MuiTypography-root"
              data-testid="typography-component"
              style={
                {
                  "color": "#7D7D89",
                }
              }
            >
              Payment method
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              data-testid="typography-component"
              style={
                {
                  "color": "#343446",
                }
              }
            >
              Visa credit ...8845
            </p>
          </div>
        </div>
        <div>
          <img
            alt="icon"
            data-testid="iconComponent"
            height="40px"
            src=""
            style={
              {
                "padding": undefined,
              }
            }
            width="40px"
          />
        </div>
        <div
          className="MuiBox-root css-1oyjow8"
        >
          <div
            className="MuiBox-root css-1j5om8t"
          >
            <div>
              <img
                alt="icon"
                data-testid="iconComponent"
                height="32px"
                src=""
                style={
                  {
                    "padding": "5px 6px",
                  }
                }
                width="32px"
              />
            </div>
          </div>
          <div
            className="MuiBox-root css-15budcu"
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-1d9ye53-MuiTypography-root"
              data-testid="typography-component"
              style={
                {
                  "color": "#7D7D89",
                }
              }
            >
              Delivery fees
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              data-testid="typography-component"
              style={
                {
                  "color": "#343446",
                }
              }
            >
              0.001 BTC
            </p>
          </div>
        </div>
        <div>
          <img
            alt="icon"
            data-testid="iconComponent"
            height="40px"
            src=""
            style={
              {
                "padding": undefined,
              }
            }
            width="40px"
          />
        </div>
        <div
          className="MuiBox-root css-1oyjow8"
        >
          <div
            className="MuiBox-root css-1j5om8t"
          >
            <div>
              <img
                alt="icon"
                data-testid="iconComponent"
                height="32px"
                src=""
                style={
                  {
                    "padding": "5px 6px",
                  }
                }
                width="32px"
              />
            </div>
          </div>
          <div
            className="MuiBox-root css-15budcu"
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-1d9ye53-MuiTypography-root"
              data-testid="typography-component"
              style={
                {
                  "color": "#7D7D89",
                }
              }
            >
              Deposit to
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              data-testid="typography-component"
              style={
                {
                  "color": "#343446",
                }
              }
            >
              Bitcoin wallet
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiStack-root css-dlxwab-MuiStack-root"
  >
    <div
      className="MuiStack-root css-6hgg78-MuiStack-root"
    >
      <span
        className="MuiTypography-root MuiTypography-overline css-1wrpxv1-MuiTypography-root"
        data-testid="typography-component"
      >
        0.023451 BTC
      </span>
      <div>
        <img
          alt="icon"
          data-testid="iconComponent"
          height="4px"
          src=""
          style={
            {
              "padding": "0 0 4px 0",
            }
          }
          width="330px"
        />
      </div>
      <span
        className="MuiTypography-root MuiTypography-overline css-34k6ax-MuiTypography-root"
        data-testid="typography-component"
      >
        $79,875.74
      </span>
    </div>
    <div
      className="MuiStack-root css-6hgg78-MuiStack-root"
    >
      <span
        className="MuiTypography-root MuiTypography-overline css-1wrpxv1-MuiTypography-root"
        data-testid="typography-component"
      >
        transaction fee
      </span>
      <div>
        <img
          alt="icon"
          data-testid="iconComponent"
          height="4px"
          src=""
          style={
            {
              "padding": "0 0 4px 0",
            }
          }
          width="333px"
        />
      </div>
      <span
        className="MuiTypography-root MuiTypography-overline css-34k6ax-MuiTypography-root"
        data-testid="typography-component"
      >
        $1,000.00
      </span>
    </div>
    <div
      className="MuiStack-root css-6hgg78-MuiStack-root"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 css-1sjk0ek-MuiTypography-root"
        data-testid="typography-component"
      >
        Total
      </p>
      <div>
        <img
          alt="icon"
          data-testid="iconComponent"
          height="4px"
          src=""
          style={
            {
              "padding": "0 0 1px 0",
            }
          }
          width="370px"
        />
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 css-179i82-MuiTypography-root"
        data-testid="typography-component"
      >
        $80,875.74
      </p>
    </div>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-ib6dj5-MuiButtonBase-root-MuiButton-root"
      data-testid="button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      BUY NOW
    </button>
  </div>
</div>
`;

exports[`renders sell summary card correctly 1`] = `
<div
  className="MuiBox-root css-ufn7cb"
  data-testid="summary-card"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-tc7jh2-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 css-1d9ye53-MuiTypography-root"
        data-testid="typography-component"
        style={
          {
            "color": "#7D7D89",
          }
        }
      >
        You are selling
      </p>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        data-testid="typography-component"
      >
        0.023451 BTC
      </h6>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 css-1d9ye53-MuiTypography-root"
        data-testid="typography-component"
        style={
          {
            "color": "#7D7D89",
          }
        }
      >
        1BTC = $3,406,069.54
      </p>
    </div>
  </div>
  <div
    className="MuiBox-root css-iwz9lp"
  >
    <div>
      <div
        className="MuiBox-root css-15budcu"
        data-testid="summary-stepper"
      >
        <div
          className="MuiBox-root css-1oyjow8"
        >
          <div
            className="MuiBox-root css-1j5om8t"
          >
            <div>
              <img
                alt="icon"
                data-testid="iconComponent"
                height="32px"
                src=""
                style={
                  {
                    "padding": "5px 6px",
                  }
                }
                width="32px"
              />
            </div>
          </div>
          <div
            className="MuiBox-root css-15budcu"
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-1d9ye53-MuiTypography-root"
              data-testid="typography-component"
              style={
                {
                  "color": "#7D7D89",
                }
              }
            >
              Payment method
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              data-testid="typography-component"
              style={
                {
                  "color": "#343446",
                }
              }
            >
              Visa credit ...8845
            </p>
          </div>
        </div>
        <div>
          <img
            alt="icon"
            data-testid="iconComponent"
            height="40px"
            src=""
            style={
              {
                "padding": undefined,
              }
            }
            width="40px"
          />
        </div>
        <div
          className="MuiBox-root css-1oyjow8"
        >
          <div
            className="MuiBox-root css-1j5om8t"
          >
            <div>
              <img
                alt="icon"
                data-testid="iconComponent"
                height="32px"
                src=""
                style={
                  {
                    "padding": "5px 6px",
                  }
                }
                width="32px"
              />
            </div>
          </div>
          <div
            className="MuiBox-root css-15budcu"
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-1d9ye53-MuiTypography-root"
              data-testid="typography-component"
              style={
                {
                  "color": "#7D7D89",
                }
              }
            >
              Delivery fees
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              data-testid="typography-component"
              style={
                {
                  "color": "#343446",
                }
              }
            >
              0.001 BTC
            </p>
          </div>
        </div>
        <div>
          <img
            alt="icon"
            data-testid="iconComponent"
            height="40px"
            src=""
            style={
              {
                "padding": undefined,
              }
            }
            width="40px"
          />
        </div>
        <div
          className="MuiBox-root css-1oyjow8"
        >
          <div
            className="MuiBox-root css-1j5om8t"
          >
            <div>
              <img
                alt="icon"
                data-testid="iconComponent"
                height="32px"
                src=""
                style={
                  {
                    "padding": "5px 6px",
                  }
                }
                width="32px"
              />
            </div>
          </div>
          <div
            className="MuiBox-root css-15budcu"
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-1d9ye53-MuiTypography-root"
              data-testid="typography-component"
              style={
                {
                  "color": "#7D7D89",
                }
              }
            >
              Deposit to
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              data-testid="typography-component"
              style={
                {
                  "color": "#343446",
                }
              }
            >
              Bitcoin wallet
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiStack-root css-dlxwab-MuiStack-root"
  >
    <div
      className="MuiStack-root css-6hgg78-MuiStack-root"
    >
      <span
        className="MuiTypography-root MuiTypography-overline css-1wrpxv1-MuiTypography-root"
        data-testid="typography-component"
      >
        0.023451 BTC
      </span>
      <div>
        <img
          alt="icon"
          data-testid="iconComponent"
          height="4px"
          src=""
          style={
            {
              "padding": "0 0 4px 0",
            }
          }
          width="330px"
        />
      </div>
      <span
        className="MuiTypography-root MuiTypography-overline css-34k6ax-MuiTypography-root"
        data-testid="typography-component"
      >
        $79,875.74
      </span>
    </div>
    <div
      className="MuiStack-root css-6hgg78-MuiStack-root"
    >
      <span
        className="MuiTypography-root MuiTypography-overline css-1wrpxv1-MuiTypography-root"
        data-testid="typography-component"
      >
        transaction fee
      </span>
      <div>
        <img
          alt="icon"
          data-testid="iconComponent"
          height="4px"
          src=""
          style={
            {
              "padding": "0 0 4px 0",
            }
          }
          width="333px"
        />
      </div>
      <span
        className="MuiTypography-root MuiTypography-overline css-34k6ax-MuiTypography-root"
        data-testid="typography-component"
      >
        $1,000.00
      </span>
    </div>
    <div
      className="MuiStack-root css-6hgg78-MuiStack-root"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 css-1sjk0ek-MuiTypography-root"
        data-testid="typography-component"
      >
        Total
      </p>
      <div>
        <img
          alt="icon"
          data-testid="iconComponent"
          height="4px"
          src=""
          style={
            {
              "padding": "0 0 1px 0",
            }
          }
          width="370px"
        />
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 css-179i82-MuiTypography-root"
        data-testid="typography-component"
      >
        $78,875.74
      </p>
    </div>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1k23lp7-MuiButtonBase-root-MuiButton-root"
      data-testid="button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      SELL NOW
      <span
        className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
